[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enimies/Perseguidores/Enemy_chaser_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enimies/EnemyAttack/Enemy_attack_test.gd" type="Script" id=4]
[ext_resource path="res://Assets/Enimies/EnemyAttack/test.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.1964, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 90.0

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 4 )
velocidade = 100

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="." index="10"]
position = Vector2( 45, 0 )
script = ExtResource( 5 )

[node name="Hitbox2" parent="Position2D" index="0" instance=ExtResource( 2 )]
position = Vector2( -45, 0 )
collision_mask = 4

[node name="CollisionShape2D" parent="Position2D/Hitbox2" index="0"]
position = Vector2( 44.5675, -0.840897 )
shape = SubResource( 2 )
disabled = true

[node name="melee_range" type="Area2D" parent="." index="11"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="melee_range" index="0"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="." index="12"]
wait_time = 0.4
one_shot = true

[node name="AtackTimer" type="Timer" parent="." index="13"]
wait_time = 0.2
one_shot = true
[connection signal="body_entered" from="melee_range" to="." method="_on_melee_range_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AtackTimer" to="." method="_on_AtackTimer_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Range"]

[editable path="Position2D/Hitbox2"]
